# mango

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  guidelines.md  noxfile.py  pyproject.toml  readme.md  requirements.txt  ruff.toml  setup.cfg  setup.py  test_ui_scenario.py
.github/workflows/: publish-mango.yml  test-mango.yml
docs/: requirements.txt
docs/source/: agents-container.rst  codecs.rst  conf.py  customizing-container.rst  development.rst  getting_started.rst  impressum.rst  index.rst  installation.rst  legals.rst  message exchange.rst  migration.rst  role-api.rst  scheduling.rst  simulation-ev-tutorial.rst  simulation.rst  topology.rst  transactions.rst  tutorial.rst
docs/source/_static/: ev_soc_netpower.html  ev_trajectories.html  gen_ev_plots.py
docs/source/api_ref/: index.rst  mango.agent.rst  mango.container.rst  mango.express.rst  mango.messages.rst  mango.modules.rst  mango.simulation.rst  mango.util.rst
examples/: external_clock.py  ping_pong_termination.py  rrule_event.py  simple_agent.py  tcp_container_example.py  tutorial.py
examples/distributed_clock/: README.md  clock_agent.py  clock_manager.py  docker-compose.yml  mqtt.conf
examples/getting_started/: v_1.py  v_2.py  v_3.py  v_4.py
examples/tutorial/: v1_basic_setup_and_message_passing.py  v2_inter_container_messaging_and_basic_functionality.py  v3_codecs_and_typing.py  v4_scheduling_and_roles.py
mango/: __init__.py  requirements.txt  setup.py
mango/agent/: __init__.py  conversation.py  core.py  decorators.py  llm.py  role.py
mango/container/: core.py  external_coupling.py  factory.py  mosaik.py  mp.py  mqtt.py  protocol.py  tcp.py
mango/core/: agent.py  container.py  container_protocols.py
mango/env/: api.py
mango/examples/: external_clock.py  simple_agent.py  tcp_container_example.py
mango/express/: api.py  health.py  topology.py
mango/mango/cohda/: coalition.py  negotiation.py  planning.py  role.py  termination.py
mango/mango/core/: agent.py  container.py  container_protocols.py  container_without_register.py
mango/mango/messages/: acl_message_pb2.py
mango/mango/modules/: base_module.py  mqtt_module.py  rabbit_module.py
mango/mango/role/: api.py  core.py  role.py
mango/mango/util/: m_util.py  scheduling.py
mango/messages/: acl_message.proto  acl_message_pb2.py  codecs.py  fast_json.py  mango_message.proto  mango_message_pb2.py  message.py  other_proto_msgs.proto  other_proto_msgs_pb2.py
mango/modules/: base_module.py  mqtt_module.py  rabbit_module.py  zero_module.py
mango/role/: api.py  core.py
mango/simulation/: __init__.py  communication.py  container.py  environment.py  recording.py  visualization.py  world.py
mango/tests/integration_tests/: test_cohda.py  test_mqtt_container.py  test_tcp_container.py
mango/tests/unit_tests/: dummy_test.py  role_agent_test.py
mango/ui/: __init__.py  registry.py  server.py
mango/ui/static/: index.html
mango/util/: clock.py  distributed_clock.py  multiprocessing.py  scheduling.py  termination_detection.py
tests/integration_tests/: __init__.py  msg_pb2.py  test_distributed_clock.py  test_message_roundtrip.py  test_message_roundtrip_mp.py  test_mqtt_container.py  test_single_container_termination.py  test_tcp_container.py  test_ui_registry_mp.py
tests/manual/: ui_topology_demo.py
tests/unit_tests/: dummy_test.py  role_agent_test.py  test_agent.py  test_agents.py
tests/unit_tests/clock/: test_external_clock.py
tests/unit_tests/container/: test_mp.py  test_tcp.py
tests/unit_tests/core/: test_agent.py  (+5 more)
(+37 files in other folders)
